syntax = "proto3";
option csharp_namespace = "UICrafter.Core.AppView";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "protos/annotations.proto";

message AppView {
  int64 Id = 1;
  string UserId = 2;
  string Name = 3;
  google.protobuf.Timestamp CreatedAtUTC = 4;
  google.protobuf.Timestamp UpdatedAtUTC = 5;
  bytes Content = 6;
  bool IsPublic = 7;
}

message AppViewMetadata {
  int64 Id = 1;
  string UserId = 2;
  string Name = 3;
  google.protobuf.Timestamp CreatedAtUTC = 4;
  google.protobuf.Timestamp UpdatedAtUTC = 5;
  string UserName = 6;
  bool IsPublic = 7;
}

// Request and response messages for CRUD operations
message CreateAppViewRequest {
  AppView app_view = 1;
}

message GetAppViewRequest {
  int64 id = 1;
}

message UpdateAppViewRequest {
  AppView app_view = 1;
}

message DeleteAppViewRequest {
  int64 id = 1;
}

message ListAppViewMetadataResponse {
  repeated AppViewMetadata app_views = 1;
}

// CRUD service definition for AppView
service AppViewService {
  // Create a new AppView
  rpc CreateAppView(CreateAppViewRequest) returns (AppView) {
    option (google.api.http) = {
      post: "/v1/app_views"
      body: "app_view"
    };
  }

  // Get an AppView by ID
  rpc GetAppView(GetAppViewRequest) returns (AppView) {
    option (google.api.http) = {
      get: "/v1/app_views/{id}"
    };
  }

  // Update an existing AppView
  rpc UpdateAppView(UpdateAppViewRequest) returns (AppView) {
    option (google.api.http) = {
      put: "/v1/app_views"
      body: "app_view"
    };
  }

  // Delete an AppView by ID
  rpc DeleteAppView(DeleteAppViewRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/app_views/{id}"
    };
  }

  // List all public AppViews
  rpc ListAppViewMetadata(google.protobuf.Empty) returns (ListAppViewMetadataResponse) {
    option (google.api.http) = {
      get: "/v1/public_app_views"
    };
  }
}
